# data-profiler

./: README.md  pyproject.toml
ipynb/: data_drift.ipynb
