[tool.poetry]
name = "data-profiler"
version = "0.1.0"
description = ""
authors = ["theofilusarifin <theofilusarifin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.17.2"
whylogs = "^1.6.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
